# llm-tools-server

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  run.sh
.github/workflows/: build-and-publish-docker-image-on-tag.yaml
src/core/: app.py  args.py  chat.py  chat_models.py  globals.py  logger.py  main.py
src/core/repositories/: files_repository.py
src/core/routers/: chat_models.py  router_auth.py  router_base.py  router_caps.py  router_chat_completions.py  router_files.py  router_knowledge.py  router_models.py  router_utils.py  schemas.py
src/core/tools/: tool_abstract.py  tool_context.py  tool_ping_pong.py  tools.py  utils.py
src/doc_search/: pyproject.toml
src/doc_search/extactor/: worker.py
src/mcpl/: globals.py  mcpl_base.py  pyproject.toml  servers.py  wrappers.py
src/mcpl/repositories/: repo_mcpl_servers.py
src/mcpl/routers/: router_mcpl.py
src/openai_wrappers/: types.py  utils.py
tests/: stream_document_uploads.py
